add link to index.html

--- a/mytest.html
+++ b/mytest.html
@@ -1,2 +1,32 @@
-<a href="https://www.nkust.edu.tw"> my school</a>
-<a href="https://www.nkust.edu.tw" target="_blank"> my school</a>
+<html>
+<head>
+  
+  <title>my favorite</title>
+</head>
+<body>
+
+<h1>遊戲網站</h1>
+
+<h2>Legend</h2>
+
+<a href="https://moba.garena.tw/" target="_blank"> 傳說對決</a><br/>
+
+<h2>Decisive moment</h2>
+
+<a href="https://www.callofduty.com/tw/zh/home">決勝時刻 </a><br/>
+<a href="mailto:C109130147@nkust.edu.tw">email to me </a><br/>
+
+<a href="https://www.nkust.edu.tw"> my school</a><br/>
+
+<h1>what is table tag</h1>
+
+<table>
+  <tr>
+    <td></td>
+  </tr>
+  
+</table>
+
+</body>
+
+</html>
